objects/EUR_CRM_Weekly_Notes__c.object
<CustomObject>
    <description>Weekly Notes object for EUR Mobile App</description>
    <fields>
        <fullName>EUR_CRM_Notes__c</fullName>
        <label>Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Weekly_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Week_Start_Date__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <label>Weekly Notes (EU)</label>
    <nameField>
        <displayFormat>WN-{0000000000}</displayFormat>
        <label>Weekly Notes ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Notes (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_EMEA_Weekly_Notes</fullName>
        <active>true</active>
        <label>EUR EMEA Weekly Notes</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>